# AzureDeployment_Ai

./: .dockerignore  .env.docker  .gitignore  LICENSE  README.md  docker-compose.observability.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  run_platform.py  test_deployment.py  vector_integration.md
.github/: dependabot.yml  security.yml
.github/workflows/: ci.yml
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/auth/: AuthenticationFlow.tsx  LoginPage.tsx  RegisterPage.tsx  UserProfile.tsx
apps/web/src/config/: models.ts  tools.ts
apps/web/src/hooks/: useReviewer.ts  useTools.ts
apps/web/src/lib/: api.ts  logger.test.js  logger.ts  memory.ts  reviewerClient.ts  schema.ts  stream.ts  toolsClient.ts  uuid.ts  ws.ts
apps/web/src/store/: error-boundary.ts  index.ts
observability/grafana/: devops-ai-api-dashboard.json
src/: py.typed
src/app/: config.py  logging_config.py  streamlit_app.py  utils.py
src/app/agents/: react_agent.py  types.py
src/app/ai/: arg_mapper.py  client.py  generator.py  reviewer.py  tools_definitions.py  tools_router.py  types.py
src/app/ai/agents/: __init__.py  base.py  chain.py  coordinator.py  factory.py  learning.py  memory.py  orchestrator.py  provisioning.py  provisioning_task.py  react_agent.py  reactive.py  supervisor.py  types.py  unified_agent.py  vector_enhanced_agent.py
src/app/ai/embeddings/: batch_processor.py  cache.py  client.py  config.py  context.py  tokenizer.py
src/app/ai/functions/: schemas.py
src/app/ai/intelligence/: __init__.py  dependency_analyzer.py  learning_integration.py  resource_intelligence.py
src/app/ai/llm/: base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py  registry.py  unified_provider.py  utils.py
src/app/ai/nlu/: __init__.py  advanced_parser.py  embeddings_classifier.py  embeddings_clients.py  intent_classifier.py  lightweight_classifier.py  llm_parser.py  patterns.py  provision_mapper.py  unified_parser.py  vector_enhanced_parser.py
src/app/ai/validation/: __init__.py  llm_models.py
src/app/api/: Dockerfile  __init__.py  __main__.py  auth.py  error_handlers.py  main.py  schemas.py  server.py  services.py
src/app/api/middleware/: authentication.py  correlation.py  embeddings_budget.py  idempotency  idempotency.py  rate_limiter.py  telemetry.py
src/app/api/routes/: __init__.py  agents.py  audit.py  auth.py  auth_azure.py  chat.py  cost.py  deploy.py  deploy_ws.py  health.py  mcp_integration.py  memory.py  metrics.py  review.py  schemas.py  status.py  structured.py  ws.py
src/app/api/schemas/: events.py
src/app/api/security/: entra.py
src/app/api/services/: __init__.py  chat_service.py  memory_service.py
src/app/api/v2/: __init__.py  audit.py  auth.py  chat.py  cost.py  deploy.py  metrics.py  model.py  status.py
src/app/cache/: redis_cache.py
src/app/clients/: api_client.py
src/app/common/: async_pool.py  envs.py
src/app/core/: azure_auth.py  config.py  container.py  correlation.py  database.py  exceptions.py  loggig_sanitizer.py  logging.py  logging_sanitizer.py  loging.py  retry.py  streams.py
src/app/core/cache/: base.py  dependency.py  hybrid_cache.py  ml_optimizer.py  multi.py  redis_cache.py  serializers.py
src/app/core/data/: repository.py
src/app/core/function_calling/: __init__.py  dispatcher.py  middleware.py  parser.py  registry.py
src/app/core/plugins/: __init__.py  base.py  manager.py  registry.py
src/app/core/provisioning/: __init__.py  avm_fallback.py  deployment_phases.py  execution_context.py  fallback_strategy.py
src/app/core/schemas/: __init__.py  base.py  registry.py
src/app/core/vector/: __init__.py  docker_init.py  registry.py
src/app/database/: connection.py
src/app/database/repositories/: base.py
src/app/events/: provesioning_task.py  provisioning_task.py  schemas.py
src/app/jobs/: queue.py
src/app/kb/: ingest.py  search.py
src/app/mcp/: __init__.py  cache.py  client.py  extensions.py  http_server.py  mcp_integration.py  resources.py  schemas.py  server.py  streaming.py
src/app/mcp/prompts/: azure.py
src/app/mcp/tools/: cost_intelligence.py  integrated_analytics.py  security_advisor.py  vector_intelligence.py  what_if.py
src/app/memory/: agent_persistence.py  deployment_learning.py  storage.py
src/app/monitoring/: health.py
src/app/observability/: __init__.py  agent_service_mapper.py  agent_tracing.py  app_insights.py  distributed_tracing.py  health_check.py  logging_sanitizer.py  loging_sanitizer.py  observability_config.py  otel_fixes.py  otel_patch.py  prometheus.py  tracing.py
src/app/observability/ai/: __init__.py  assistant.py  detector.py  predictor.py  rca.py  types.py
src/app/platform/audit/: logger.py
src/app/routers/: deployments.py
src/app/runtime/: backend.py  streams.py
src/app/services/: __init__.py  agent_service.py  deployment_manager.py  deployment_preview.py
src/app/tools/: __init__.py  base.py  config.py  registry.py
src/app/tools/azure/: __init__.py  clients.py  deployment_phases.py  idempotency.py  intelligent_provision.py  output_formatter.py  quota_check.py  tags.py  tool.py  validators.py  vector_enhanced_provision.py
src/app/tools/finops/: analyzer.py  carbon.py  cost_ingestion.py  cost_tool.py  forecasting.py  optimization.py  resource_discovery.py
src/app/tools/provision/: __init__.py  models.py  orchestrator.py  router.py  terraform_runner.py
src/app/worker/: __main__.py  jobs.py
tests/: test_arg_mapper.py  test_audit_logger_latency.py  test_azure_clients_refresh.py  test_cache_manager_context.py  test_container_inject.py  test_cost_tool_parsing.py  test_error_handling.py  test_extract_json_logging.py  test_extract_json_object.py  test_handle_errors_sync_wrapper.py  test_inject_decorator.py  test_openai_list_models_logging.py  test_rate_limiter_cleanup.py  test_rate_limiter_middleware.py  test_terraform_runner.py  test_ws_routes.py
(+122 files in other folders)
